--- a/src/app/features/about/member-bio-dialog.html
+++ b/src/app/features/about/member-bio-dialog.html
@@ -5,7 +5,7 @@
       <img [src]="data.member.image" 
            [alt]="data.member.name"
            class="img-fluid">
-      <div class="member-label">{{ data.member.instrument }}</div>
+      <div class="member-label d-inline-block w-100 text-center p-2 text-uppercase fw-bold mt-3">{{ data.member.instrument }}</div>
     </div>
 
     <!-- Main Content Column -->
